<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  common start -->
    <string name="app_name">老实盘</string>

    <string name="authName">Honestman_Disk</string>
    <string name="authKey">097c20c8481f0248e50cd056aa46b02c</string>
    <string name="authSecret">ca62f95ef3c51f0929f9fcabf0bc13ee</string>
    
    <string name="usernameHint">手机号/邮箱</string> 
    <string name="passwordHint">6~12位密码</string>
    <string name="loginMargin">20dip</string>
    <string name="username">龙泽王希</string>
    
    <!--  directory start -->
    	<string name="directory_title_name">目录</string>
	<!--  directory end -->
    
    <!--  photo start -->
	<!--  photo end -->
	
	
	<!--  contact start -->
	<!--  contact end -->
    
    
    <!--  share start -->
        <string name="hello_world">Hello world!</string>
	    <string name="action_settings">Settings</string>
	    <string name="login_to_cloud">登录360云盘</string>
	    <string name="tv_account">帐号：</string>
	    <string name="tv_password">密码：</string>
	    <string name="tv_forget_password">忘记密码</string>
	    <string name="tv_my_cloud">我的云盘</string>
	    <string name="tv_menu_title">海量手机资源</string>
	    <string name="tv_menu_msg">电子书 音乐 壁纸 铃声</string>
	    <string name="tv_file_name">遇见未知的自己.txt</string>
	    <string name="tv_file_msg">188.3M  修改时间:2012–11–23</string>
	    <string name="tv_file_op_delete">删除</string>
	    <string name="tv_file_op_download">下载</string>
	    <string name="tv_file_op_share">分享</string>
	    <string name="tv_file_op_more">更多</string>
	    <string name="tv_menu_account">475500230@qq.com</string>
	    <string name="tv_menu_space">219M / 7.4G</string>
	    <string name="tv_menu_auto_backup">自动备份照片</string>
	    <string name="tv_menu_transfer">传输管理</string>
	    <string name="tv_menu_history">查看最近操作</string>
	    <string name="tv_menu_connect">发送文件到电脑</string>
	    <string name="tv_menu_reward">免费抽空间</string>
	    <string name="tv_menu_setting">设置</string>
	    <string name="tv_menu_logout">退出登录</string>
	    <string name="btn_upload">上传</string>
	    <string name="btn_download">下载</string>
	    <string name="btn_more">更多</string>
	    <string name="btn_share">分享</string>
	    <string name="btn_show">显示</string>
	    <string name="btn_add_accounts">快速注册</string>
	    <string name="btn_quick_register">立即登录</string>
	    <string name="et_account_hint">请输入您的手机号\邮箱\用户名</string>
	    <string name="et_password_hint">请输入密码</string>
	    <string name="title_activity_main">MainActivity</string>
	    <string name="share_title_name">快享</string>
	    <string name="share_back">返回</string>
	    <string name="share_dock_send">分享文件</string>
	    <string name="share_dock_receive">接收文件</string>
	    <string name="share_dock_history">历史记录</string>
	    <string name="share_search_text">开始查收小伙伴的分享?</string>
	    <string name="share_search_abort">搞起</string>
	    <string name="share_file_received_dump">转存到云盘</string>
	    <string name="share_file_received_ignore">忽略</string>
	    <string name="share_file_received_info">您的朋友XXX向您分享了XXXXXX等N个文件</string>
	<!--  share end -->
</resources>