<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/top_bar"
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:layout_gravity="center_vertical"
	    android:background="@color/blue"
	    android:orientation="horizontal" >

	    <ImageView
	        android:id="@+id/share_backward"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="5dp"
	        android:background="@drawable/backward"/>
	
	    <TextView
	        android:id="@+id/share_title"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_toRightOf="@+id/share_title_back"
	        android:layout_toLeftOf="@+id/share_button_share"
	        android:gravity="center"
	        android:textSize="20dp"
	        android:textColor="@color/white"
	        android:text="@string/share_title_name" />
	    
	    <ImageView
	        android:id="@+id/share_button_share"
	        android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:layout_centerInParent="true"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="8dp"
	        android:background="@drawable/share_btn_share"/>    
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/share_dock_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/share_title_menu_bg"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="0dp" >

        <TextView
            android:id="@+id/share_dock_send"
            style="@style/menuTitle"
            android:background="@drawable/share_title_menu_current"
            android:text="@string/share_dock_send"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/share_dock_receive"
            style="@style/menuTitle"
            android:background="@drawable/share_title_menu_bg"
            android:text="@string/share_dock_receive"
            android:textColor="@color/grey" />
        
        <TextView
            android:id="@+id/share_dock_history"
            style="@style/menuTitle"
            android:background="@drawable/share_title_menu_bg"
            android:text="@string/share_dock_history"
            android:textColor="@color/grey" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/share_file_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/top_bar"
        android:layout_above="@+id/share_dock_bar" />

</RelativeLayout>