<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".MainActivity" >
    
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@color/white"
	    android:orientation="vertical"
	    android:layout_centerInParent="true" >
	    <TextView
	        android:id="@+id/share_received_file_info"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="15dp"
	        android:layout_gravity="center"
	        android:textColor="@color/blue"
	        android:text="@string/share_file_received_info" />
	    <RelativeLayout
	        android:id="@+id/share_file_recieved_confirm"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@color/white" 
		    >
		    <TextView
		        android:id="@+id/share_file_received_dump"
		        android:layout_width="115dp"
		        android:layout_height="wrap_content"
		        android:gravity="center"
				android:layout_marginRight="10dp"
				android:padding = "5dp"
		        android:textSize="20dp"
		        android:textColor="@color/white"
		        android:text="@string/share_file_received_dump"
		        android:background="@color/blue"
		        android:paddingLeft="5dp"
		        android:paddingRight="5dp"
		        android:layout_marginTop="10dp"
		        android:layout_below="@+id/share_search_text"/>    
		        
			<TextView
		        android:id="@+id/share_file_received_ignore"
		        android:layout_width="115dp"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:layout_marginLeft="10dp"
				android:layout_toRightOf="@+id/share_file_received_dump"
				android:padding = "5dp"
		        android:textSize="20dp"
		        android:textColor="@color/white"
		        android:text="@string/share_file_received_ignore"
		        android:background="@color/red"
		        android:paddingLeft="5dp"
		        android:paddingRight="5dp"
		        android:layout_marginTop="10dp"
		        android:layout_below="@+id/share_search_text"/> 
		</RelativeLayout>
	</LinearLayout>
</RelativeLayout>